src/snapshots/mend__run__tests__create_run_status_one_step.snap
---
source: src/run.rs
expression: step_requests
---
- run: cmd arg1 arg2
  run_resolved:
    - "cmd arg1 arg2\n"
  commit_msg: cmd arg1 arg2

