src/snapshots/mend__run__tests__run_all_steps_reports_failure_with_failed_step.snap
---
source: src/run.rs
expression: logger_ref_cell.borrow().messages
---
- Notify step 0 status Running inc true
- "Executor run script:\n..before..\n"
- Notify step 0 status Failed inc false
- Repo reset hard
- Notify step 0 status Failed inc false

