src/snapshots/mend__run__tests__run_step_reports_failure_and_resets.snap
---
source: src/run.rs
expression: logger_ref_cell.borrow().messages
---
- Notify step 1 status Running inc true
- "Executor run script:\n..before..\n"
- Notify step 1 status Failed inc false
- Repo reset hard
- Notify step 1 status Failed inc false

